bisonc++ (4.04.01) 

  * Removed the possibility to specify path names for the --baseclass-header,
    --class-header, --implementation-header, and --parsefun-source options
    (and corresponding directives)   


bisonc++ (4.04.00) 

  * Repaired %target-directory not recognizing path-characters and not
    removing surrounding "-delimiters.

  * The --baseclass-header, --class-header, --implementation-header, and
    --parsefun-source options (and corresponding directives) now also accept
    path-specifications. 

  * The man-page and manual have been updated accordingly.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 26 May 2013 14:22:50 +0200

bisonc++ (4.03.00) 

  * Bisonc++ before 4.03.00 failed to notice the --debug option. Now repaired.

  * Added the rpn example to the manual, and repaired typos in the manual.

  * Options/directives that can only accept file names (like
    --baseclass-header) no longer accept path names.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 31 Mar 2013 11:25:49 +0200

bisonc++ (4.02.01) 

  * Parser-class header files (e.g., Parser.h) and parser-class internal
    header files (e.g., Parser.ih) generated with bisonc++ < 4.02.00 require
    two hand-modifications when used in combination with bisonc++ >= 4.02.00:

    In Parser.h, just below the declaration 
        void print__();
    add:
        void exceptionHandler__(std::exception const &exc);

    In Parser.ih, assuming the name of the generated class is `Parser', add
    the following member definition (if a namespace is used: within the
    namespace's scope):
        inline void Parser::exceptionHandler__(std::exception const &exc)
        {
            throw;  // re-implement to handle exceptions thrown by actions
        }
    This function may be re-implemented, see the man-page for further details.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 11 Mar 2013 16:50:26 +0100

bisonc++ (4.02.00) 
