@@ -1,5 +1,5 @@
-    Syntax: bf(%class-header) tt(pathname) nl()
-           tt(Pathname) defines the path to the file to contain the parser
+    Syntax: bf(%class-header) tt(filename) nl()
+           tt(Filename) defines the name of the file to contain the parser
             class. Defaults to the name of the parser class plus the suffix
             tt(.h) This directive is overruled by the bf(--class-header)
             (bf(-c)) command-line option.
